--- a/Generator/OrmGenerator.csproj
+++ b/Generator/OrmGenerator.csproj
@@ -2,17 +2,30 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<OutputItemType>Analyzer</OutputItemType>
-		<Analyzer>true</Analyzer>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
+
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>OrmGenerator</PackageId>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="bin\Release\netstandard2.0\OrmGenerator.dll" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="$(OutputPath)$(AssemblyName).dll">
+			<Pack>true</Pack>
+			<PackagePath>analyzers/dotnet/cs/</PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
