--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Generator\OrmGenerator.csproj" OutputItemType="Analyzer"/>
+    <ProjectReference Include="..\Generator\OrmGenerator.csproj"  OutputItemType="Analyzer"
+    ReferenceOutputAssembly="false"/>
   </ItemGroup>
 
   <ItemGroup>
